Add title and console window

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./globals.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=KoHo&family=Kode+Mono:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=KoHo&family=Kode+Mono:wght@500&family=Space+Mono&display=swap" rel="stylesheet">
     <title>Creative Developer</title>
   </head>
   <body lang="en" class="font-oswald bg-default-bg">
